--- a/wiki/InstallationAndUsage.wiki
+++ b/wiki/InstallationAndUsage.wiki
@@ -1,2 +1,2 @@
 =Installation And Usage=
-You can directly launch the application from the path http://code.google.com/p/crucible-excel-dump/source/browse/trunk/Publish/CrucibleData.application
+You can directly launch the setup from [here|http://crucible-excel-dump.googlecode.com/svn/trunk/Publish/setup.exe]
