Edited wiki page InstallationAndUsage through web user interface.

--- a/wiki/InstallationAndUsage.wiki
+++ b/wiki/InstallationAndUsage.wiki
@@ -1,2 +1,2 @@
 =Installation And Usage=
-You can directly launch the setup from [here|http://crucible-excel-dump.googlecode.com/svn/trunk/Publish/setup.exe]
+You can directly launch the setup from [http://crucible-excel-dump.googlecode.com/svn/trunk/Publish/setup.exe here]
