Edited wiki page InstallationAndUsage through web user interface.

--- a/wiki/InstallationAndUsage.wiki
+++ b/wiki/InstallationAndUsage.wiki
@@ -1,1 +1,3 @@
 =Installation And Usage=
+
+You can directly launch the application from [http://crucible-excel-dump.googlecode.com/svn/trunk/Publish/CrucibleData.application here]
