--- a/wiki/InstallationAndUsage.wiki
+++ b/wiki/InstallationAndUsage.wiki
@@ -1,3 +1,3 @@
 =Installation And Usage=
 
-You can directly launch the application from [http://crucible-excel-dump.googlecode.com/svn/trunk/Publish/CrucibleData.application here]
+You can directly launch the setup from [http://crucible-excel-dump.googlecode.com/svn/trunk/Publish/setup.exe here]
